--- a/Deckel-Shop/Views/Shared/_Layout.cshtml
+++ b/Deckel-Shop/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         
-        .container {
+       /* .container {
             border-radius: 5px;
             padding: 20px;
         }
@@ -25,41 +25,48 @@
         .container-sm {
             height: 70px;
             background-color: #f2f2f2;
-        }
+        }*/
     </style>
 
 </head>
 <body>
-    <nav class="navbar navbar-expand-sm py-3 navbar-dark navbar fixed-top shadow-sm DeckelHeader">
-        <div class="container container-sm DeckelNavBar">
-            <a class="navbar-brand " asp-area="" asp-controller="Home" asp-action="index">
-                <!-- Logo Image -->
-                <img src="~/Image//Deckel-Shop-Logo2.png" width="80" height="80" alt="" class="d-inline-block align-middle mr-2">
-            </a>
-
-            <div id="" class="    ">
-                <ul class="navbar-nav ml-auto catBlock">
-                    <li class="nav-item "><a style="color:#a78e5a" class="nav-link  " asp-area="" asp-controller="Profile" asp-action="administrator">Admin</a></li>
-
-                    <li class="nav-item "><a style="color:#a78e5a" class="nav-link  " asp-area="" asp-controller="Product" asp-action="index">Shop</a></li>
-                    <li class="nav-item "><a style="color:#a78e5a" class="nav-link  " asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li class="nav-item "><a style="color:#a78e5a" class="nav-link " asp-area="" asp-controller="Home" asp-action="Contact">Contacts</a></li>
-                    <li class="nav-item ">
-                        <form class="form-inline">
-                            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                        </form>
-                    </li>
-                    <li class="nav-item ">
-                        <partial name="_LoginPartial" />
-                    </li>
-                    <li class="nav-item ">
-                        <a class="fas fa-shopping-cart" asp-area="" asp-controller="Cart" asp-action="Index" style="font-size:48px; color:#a78e5a;"></a>
-                    </li>
-                </ul>
+    <header>
+        <nav>
+            <div class="logo">
+                <a asp-area="" asp-controller="Home" asp-action="index">
+                    <img id="img_logo" alt="Logo" src="@Url.Content("~/Image/Deckel-Shop-Logo2.png")" />
+                </a>
             </div>
-        </div>
-    </nav>
+            <ul class="nav-links">
+                <li>
+                    <a asp-area="" asp-controller="Profile" asp-action="administrator">Admin</a>
+                </li>
+                <li>
+                    <a asp-area="" asp-controller="Product" asp-action="index">Shop</a>
+                </li>
+                <li>
+                    <a asp-area="" asp-controller="Home" asp-action="About">About</a>
+                </li>
+                <li>
+                    <a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a>
+                </li>
+            </ul>
+            <div id="nav-log" class="ml-8">
+                <partial name="_LoginPartial" />
+            </div>
+            <a asp-area="" asp-controller="Cart" asp-action="Index">
+                <i class="fas fa-shopping-cart"  style="font-size:48px; color:#a78e5a;"></i>
+            </a>
+            
 
+            <div class="burger">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
+            </div>
+        </nav>
+
+    </header>
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
@@ -227,7 +234,7 @@
     </footer>
     <!-- Footer -->
 
- 
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
@@ -235,6 +242,6 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
-   
+
 </body>
 </html>
