Changed color on nav + removed and moved Css code

--- a/Deckel-Shop/Views/Shared/_Layout.cshtml
+++ b/Deckel-Shop/Views/Shared/_Layout.cshtml
@@ -11,23 +11,7 @@
     <script type="text/javascript">(function () { var css = document.createElement('link'); css.href = 'https://use.fontawesome.com/releases/v5.1.0/css/all.css'; css.rel = 'stylesheet'; css.type = 'text/css'; document.getElementsByTagName('head')[0].appendChild(css); })();</script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-        
-       /* .container {
-            border-radius: 5px;
-            padding: 20px;
-        }
-        
-        .container main {
-            margin-top: 100px;
-        }
-
-        .container-sm {
-            height: 70px;
-            background-color: #f2f2f2;
-        }*/
-    </style>
-
+    
 </head>
 <body>
     <header>
@@ -55,17 +39,14 @@
                 <partial name="_LoginPartial" />
             </div>
             <a asp-area="" asp-controller="Cart" asp-action="Index">
-                <i class="fas fa-shopping-cart"  style="font-size:48px; color:#a78e5a;"></i>
+                <i class="fas fa-shopping-cart" style="font-size: 48px; color: #c4a970;"></i>
             </a>
-            
-
             <div class="burger">
                 <div class="line1"></div>
                 <div class="line2"></div>
                 <div class="line3"></div>
             </div>
         </nav>
-
     </header>
     <div class="container">
         <main role="main" class="pb-3">
@@ -131,14 +112,11 @@
                 <div class="col-md-3 mx-auto mt-3 mt-md-0 mb-0 mb-md-4">
 
                     <!-- Links -->
-                    <h5>About Us</h5>
+                    <h5>Some Footer Text</h5>
                     <hr class="color-primary mb-4 mt-0 d-inline-block mx-auto w-60">
 
                     <p class="foot-desc mb-0">
-                        Here you can use rows and columns to organize your footer content. Lorem
-                        ipsum dolor sit amet,
-                        consectetur
-                        adipisicing elit.
+                        Here is some random text, that has nothing to do with the site. Why are you still reading this?
                     </p>
 
                 </div>
@@ -233,7 +211,6 @@
 
     </footer>
     <!-- Footer -->
-
 
 
 
