--- a/Deckel-Shop/Views/Profile/Administrator/Admin_customerList.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Admin_customerList.cshtml
@@ -131,60 +131,63 @@
                 </button>
             </div>
             <div class="modal-body">
-                <form>
+                <form asp-action="AddCustomer">
                     @*start of form*@
                     <div class="form-row">
                         <div class="form-group col-md-6">
-                            <label for="inputCustomerID">Customer ID</label>
+                            <label for="Id">Customer ID</label>
                             <input type="text" class="form-control" id="inputCustomerID" disabled>
                         </div>
                     </div>
                     <div class="form-row">
                         <div class="form-group col-md-6">
-                            <label for="inputFirstName">First Name</label>
-                            <input type="text" class="form-control" id="inputFirstName">
+                            <label for="FirstName">First Name</label>
+                            <input name="FirstName" type="text" class="form-control" id="inputFirstName">
                         </div>
                         <div class="form-group col-md-6">
                             <label for="inputLastName">Last Name</label>
-                            <input type="text" class="form-control" id="inputLastName">
+                            <input name="LastName" type="text" class="form-control" id="inputLastName">
                         </div>
                     </div>
                     <div class="form-row">
                         <div class="form-group col-md-6">
                             <label for="inputEmail4">Email</label>
-                            <input type="email" class="form-control" id="inputEmail4">
+                            <input name="Email" type="email" class="form-control" id="inputEmail4">
                         </div>
                         <div class="form-group col-md-6">
                             <label for="inputPassword4">Password</label>
-                            <input type="password" class="form-control" id="inputPassword4">
+                            <input name="PassWord" type="password" class="form-control" id="inputPassword4">
                             <input type="checkbox" onclick="myFunction()"> Show Password
                             @*TODO: js needed*@
                         </div>
                     </div>
+                    <div class="form-group col-md-6">
+                        <label for="inputState">Phone</label>
+                        <input name="Phone" type="text" class="form-control" id="inputState">
+                    </div>
                     <div class="form-group">
                         <label for="inputAddress">Address</label>
-                        <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+                        <input name="Street" type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
                     </div>
                     <div class="form-row">
                         <div class="form-group col-md-6">
                             <label for="inputCity">City</label>
-                            <input type="text" class="form-control" id="inputCity">
+                            <input name="City" type="text" class="form-control" id="inputCity">
                         </div>
-                        <div class="form-group col-md-4">
-                            <label for="inputState">State</label>
-                            <input type="text" class="form-control" id="inputState">
-                        </div>
-                        <div class="form-group col-md-2">
+
+                        <div class="form-group col-md-6">
                             <label for="inputZip">Zip</label>
-                            <input type="text" class="form-control" id="inputZip">
+                            <input name="ZipCode" type="text" class="form-control" id="inputZip">
                         </div>
                     </div>
                     @*end of form*@
+
+
+                    <div class="modal-footer">
+                        <input type="submit" value="Create" class="btn btn-primary" />
+                        <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
+                    </div>
                 </form>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-primary">Create</button>
-                <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
             </div>
         </div>
     </div>
