Moved and removed Css code

--- a/Deckel-Shop/Views/Home/Index.cshtml
+++ b/Deckel-Shop/Views/Home/Index.cshtml
@@ -48,7 +48,7 @@
         </a>
     </div>
 
-    <h2 class="headline-3 text-color-primary-dark">Enjoy our Products</h2>
+    <h2 class="headline-3 text-color-primary-dark">Classics Loved by all!</h2>
     <br />
     <div class="container-fluid">
         <div class="row">
@@ -61,7 +61,7 @@
         </div>
     </div>
 
-    <h2 class="headline-3 text-color-primary-dark">Pirate collection</h2>
+    <h2 class="headline-3 text-color-primary-dark">For those with Sea legs!</h2>
     <br />
     <div class="container-fluid">
         <div class="row">
@@ -70,7 +70,6 @@
             </div>
             <div class="col-md-6">
                 <img alt="Bootstrap Image Preview" class="w-100" src="~/Image/PirateGirl2.jpg" height="670"/>
-                <button type="button" class="btn btn-lg btn-primary" onclick="location.href = 'product/index';">Im in!</button>
             </div>
         </div>
     </div>
