--- a/Deckel-Shop/Views/Home/About.cshtml
+++ b/Deckel-Shop/Views/Home/About.cshtml
@@ -2,15 +2,9 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 
-<style>
-    .col-md-12 {
-        margin-bottom:50px;
-    }
-
-</style>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-12 Aboutpage">
                 <h3>
                     About us
                 </h3>
