--- a/Deckel-Shop/Views/Home/News.cshtml
+++ b/Deckel-Shop/Views/Home/News.cshtml
@@ -2,15 +2,7 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 <body>
-
-    <style>
-        .text-center{
-            margin-bottom: 100px;
-        }
-
-    </style>
-
-    <div class="container-fluid">
+    <div class="container-fluid Newspage">
         <div class="row">
             <div class="col-md-12">
                 <h3 class="text-center">
