--- a/Deckel-Shop/wwwroot/css/site.css
+++ b/Deckel-Shop/wwwroot/css/site.css
@@ -119,6 +119,43 @@ nav .nav-link {
         transition: all 0.3s ease;
     }
 
+    /**About***/
+.Aboutpage {
+    margin-bottom: 50px;
+}
+
+/**Career**/
+.container-fluid .row {
+    margin-top: 20px;
+    margin-bottom: 50px;
+    flex-wrap: nowrap;
+}
+
+
+    /**FAQ**/
+    .collapsible {
+        background-color: #6c757d;
+        color: white;
+        cursor: pointer;
+        padding: 18px;
+        width: 100%;
+        border: none;
+        text-align: left;
+        outline: none;
+        font-size: 15px;
+    }
+
+    .active, .collapsible:hover {
+        background-color: #555;
+    }
+
+.content {
+    padding: 0 18px;
+    display: none;
+    overflow: hidden;
+    background-color: #f1f1f1;
+}
+
 .footer {
     position: relative;
     bottom: 0;
@@ -205,22 +242,6 @@ nav .nav-link {
 
 .headline-3 {
     margin-top: 100px
-}
-
-
-.col-md-6 .btn {
-    position: absolute;
-    top: 85%;
-    left: 20%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    background-color: white;
-    color: rgb(0, 0, 0);
-    font-size: 16px;
-    padding: 12px 24px;
-    border: none;
-    cursor: pointer;
-    border-radius: 5px;
 }
 
 
