--- a/Deckel-Shop/Views/Profile/Administrator/Admin_customerList.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Admin_customerList.cshtml
@@ -162,7 +162,7 @@
                         </div>
                     </div>
                     <div class="form-group col-md-6">
-                        <label for="inputState">Phone</label>
+                        <label for="inputPhone">Phone</label>
                         <input name="Phone" type="text" class="form-control" id="inputState">
                     </div>
                     <div class="form-group">
@@ -180,12 +180,14 @@
                             <input name="ZipCode" type="text" class="form-control" id="inputZip">
                         </div>
                     </div>
-                    @*end of form*@
-
+                    
 
                     <div class="modal-footer">
                         <input type="submit" value="Create" class="btn btn-primary" />
                         <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
+
+                        @*end of form*@
+
                     </div>
                 </form>
             </div>
