New scaffold + index fix

--- a/Deckel-Shop/Views/Home/Index.cshtml
+++ b/Deckel-Shop/Views/Home/Index.cshtml
@@ -1,6 +1,15 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+
+
+<style>
+    .container-fluid img{
+        width: 60%;
+        height: 100%;
+        object-fit: fill;
+    }
+</style>
 <body class="flex-column">
 
     <div id="myCarousel" class="carousel slide carousel-fade" data-ride="carousel slide">
