--- a/Deckel-Shop/Views/Shared/_Layout.cshtml
+++ b/Deckel-Shop/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
                     <a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a>
                 </li>
             </ul>
-            <div id="nav-log" class="ml-8">
+            <div id="nav-log" class="" style="position: absolute; top:10%; right:25%; width:100px;  text-align:right;">
                 <partial name="_LoginPartial" />
             </div>
             <a asp-area="" asp-controller="Cart" asp-action="Index">
