--- a/Deckel-Shop/Views/Profile/Administrator/Stock.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Stock.cshtml
@@ -18,23 +18,42 @@
 </ul>
 
 @*search bar*@
-<div class="row mt-3 pt-3 mb-3">
-    <div class="col-sm-4">
-        <div class="input-group">
-            <input type="text" class="form-control searchbarForTable" placeholder="Search by Order#, Customer# etc">
-            <div class="input-group-append">
-                <button class="input-group-text"><i class="fa fa-search"></i></button>
+<div>
+
+    <div class="row mt-3 pt-3 mb-3">
+        <div class="col-sm-4">
+            <div class="input-group">
+                <input type="text" class="form-control searchbarForTable" placeholder="Search by Order#, Customer# etc">
+                <div class="input-group-append">
+                    <button class="input-group-text"><i class="fa fa-search"></i></button>
+                </div>
             </div>
         </div>
-    </div>
-    @*row with title and NEW:button modal*@
+        <div class="col-sm-2">
+            <div class="d-flex">
+                <div class="dropdown mr-1">
+                    <button type="button" class="btn btn-secondary dropdown-toggle" id="dropdownMenuOffset" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-offset="10,20">
+                        Status
+                    </button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuOffset">
+                        <form asp-action="Stock">
+                            <button name="filter" class="dropdown-item" value="0">All Products</button>
+                            <button name="filter" class="dropdown-item" value="1">Available Products</button>
+                            <button name="filter" class="dropdown-item" value="2">Removed Products</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+        @*row with title and NEW:button modal*@
 
-    @*---------------------------------------------------------------------------------*@
-    <!-- NEW: Button trigger modal -->
-    <div class="col-sm-8 text-right">
-        <button type="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModal-Product" style="background-color:transparent">
-            <i class="far fa-plus-square"></i> Add product
-        </button>
+        @*---------------------------------------------------------------------------------*@
+        <!-- NEW: Button trigger modal -->
+        <div class="col-sm-6 text-right">
+            <button type="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModal-Product" style="background-color:transparent">
+                <i class="far fa-plus-square"></i> Add product
+            </button>
+        </div>
     </div>
 </div>
 
@@ -73,6 +92,7 @@
                     <th scope="col">PRODUCT NAME</th>
                     <th scope="col">AMOUNT</th>
                     <th scope="col">PRICE</th>
+                    <th scope="col">Status</th>
                     <th scope="col"></th>
                 </tr>
             </thead>
@@ -98,6 +118,9 @@
                             @p.Price
                         </td>
                         <td>
+                            @p.Status
+                        </td>
+                        <td>
                             <span data-toggle="tooltip" data-placement="bottom" title="info">
                                 <button type="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModal-details" style="background-color:transparent">
                                     <i class="fas fa-info-circle"></i>
@@ -108,11 +131,22 @@
                                     <i class="far fa-edit"></i>
                                 </button>
                             </span>
-                            <span data-toggle="tooltip" data-placement="bottom" title="delete">
-                                <button type="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModal-delete" style="background-color:transparent">
-                                    <i class="far fa-trash-alt"></i>
-                                </button>
-                            </span>
+                            @if (p.Status == "Available")
+                            {
+                                <span data-toggle="tooltip" data-placement="bottom" title="delete">
+                                    <button onclick="RemoveProduct(@p.Id)" type="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModal-delete" style="background-color:transparent">
+                                        <i class="far fa-trash-alt"></i>
+                                    </button>
+                                </span>
+                            }
+                            else
+                            {
+                                <span data-toggle="tooltip" data-placement="bottom" title="Add Back To Stock">
+                                    <button onclick="AddBackToStock(@p.Id)" type="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModal-AddToStock" style="background-color:transparent">
+                                        <i class="far fa-plus-square"></i>
+                                    </button>
+                                </span>
+                            }
                         </td>
                     </tr>
 
@@ -255,9 +289,30 @@
                 Delete Product?
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-danger">JAJAMEEEEN</button>
+                <form asp-action="RemoveProduct">
+                      <button name="id" id="DeleteBtn" value="" class="btn btn-danger">JAJAMEEEEN</button>
+                </form>
                 <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
             </div>
+        </div>
+    </div>
+</div>
+@* Add back to stock modal*@
+<div class="modal fade" id="exampleModal-AddToStock" tabindex="-1" aria-labelledby="exampleModal-AddLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="DeckelModal modal-content">
+            <form asp-action="AddProductBackToStock">
+                <div class="modal-body">
+                    <label for="inputAmount">Amount</label>
+                    <input name="StockAmount" type="number" class="form-control" id="inputStockAmount">
+                </div>
+                <div class="modal-footer">
+
+                    <button name="id" id="AddBackToStockBtn" value="" class="btn btn-danger">JAJAMEEEEN</button>
+
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
+                </div>
+            </form>
         </div>
     </div>
 </div>
