--- a/Deckel-Shop/Views/Profile/Administrator/Admin_customerList.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Admin_customerList.cshtml
@@ -90,11 +90,11 @@
                                     </button>
                                 </span>
                                 <!-- EDIT: Button trigger modal -->
-                                <span data-toggle="tooltip" data-placement="bottom" title="edit">
+                                @*<span data-toggle="tooltip" data-placement="bottom" title="edit">
                                     <button type="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModal" style="background-color:transparent">
                                         <i class="far fa-edit"></i>
                                     </button>
-                                </span>
+                                </span>*@
                                 @*---------------------------------------------------------------------------------*@
                                 <!-- DELETE Button trigger modal -->
                                 <span data-toggle="tooltip" data-placement="bottom" title="delete">
@@ -197,7 +197,7 @@
 
 
 <!-- EDIT: Button Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<!--<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
         <div class="DeckelModal modal-content">
             <div class="modal-header">
@@ -207,9 +207,9 @@
                 </button>
             </div>
             <div class="modal-body">
-                <form>
+                <form>-->
                     @*start of form*@
-                    <div class="form-row">
+                    <!--<div class="form-row">
                         <div class="form-group col-md-6">
                             <label for="inputCustomerID">Customer ID</label>
                             <input type="text" class="form-control" id="inputCustomerID" disabled>
@@ -231,10 +231,10 @@
                             <input type="email" class="form-control" id="inputEmail4">
                         </div>
                         <div class="form-group col-md-6">
-                            <label for="inputPassword">Password</label>
-                            <input type="password" class="form-control" id="inputPassword" value="faisalkhan@123">
-                            <input type="checkbox" onclick="showPassword()"> Show Password
-                        </div>
+                            <label for="inputPassword">Password</label>-->
+                            @*<input type="password" class="form-control" id="inputPassword" value="faisalkhan@123">
+                            <input type="checkbox" onclick="showPassword()"> Show Password*@
+                        <!--</div>
                     </div>
                     <div class="form-group">
                         <label for="inputAddress">Address</label>
@@ -253,9 +253,9 @@
                             <label for="inputZip">Zip</label>
                             <input type="text" class="form-control" id="inputZip">
                         </div>
-                    </div>
+                    </div>-->
                     @*end of form*@
-                </form>
+                <!--</form>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-danger">Save changes</button>
@@ -263,7 +263,7 @@
             </div>
         </div>
     </div>
-</div>
+</div>-->
 
 
 <!-- INFO Button Modal -->
@@ -276,15 +276,15 @@
                 <span aria-hidden="true">&times;</span>
             </div>
             <div class="modal-body">
-                <form>
+                <form id="customerForm">
                     @*start of form*@
                     <div class="form-row">
                         <div class="form-group col-md-6">
                             <label for="inputCustomerID">Customer ID</label>
-                            <input type="text" class="form-control" id="inputCustomerID" disabled>
+                            <input type="text" class="form-control" id="inputCustomerID" readonly>
                         </div>
                         <div class="col-md-6 text-right">
-                            <button type="button" class="btn btn-light" style="background-color:transparent">
+                            <button type="button" id="editBtn" onclick="enableForm()" class="btn btn-light" style="background-color:transparent">
                                 <i class="far fa-edit"></i>Edit
                             </button>
                         </div>
@@ -306,8 +306,8 @@
                         </div>
                         <div class="form-group col-md-6">
                             <label for="inputPassword">Password</label>
-                            @*<input type="password" class="form-control inputpassword" id="inputPassword" value="faisalkhan@123" disabled>
-                                <input type="checkbox" onclick="showPassword()"> Show Password*@
+                            <input type="password" class="form-control inputpassword" id="inputPassword" value="faisalkhan@123" disabled>
+                                <input type="checkbox" onclick="showPassword()"> Show Password
                         </div>
                     </div>
                     <div class="form-group">
@@ -315,7 +315,7 @@
                         <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St" disabled>
                     </div>
                     <div class="form-row">
-                        <div class="form-group col-md-6">
+                        <div class="form-group col-md-4">
                             <label for="inputCity">City</label>
                             <input type="text" class="form-control" id="inputCity" disabled>
                         </div>
@@ -323,7 +323,7 @@
                             <label for="inputState">State</label>
                             <input type="text" class="form-control" id="inputState" disabled>
                         </div>
-                        <div class="form-group col-md-2">
+                        <div class="form-group col-md-4">
                             <label for="inputZip">Zip</label>
                             <input type="text" class="form-control" id="inputZip" disabled>
                         </div>
@@ -332,7 +332,7 @@
                 </form>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-danger">Save changes</button>
+                <button type="button" id="saveBtnForEditCustomer" class="btn btn-danger" disabled>Save changes</button>
                 <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
             </div>
         </div>
