--- a/Deckel-Shop/Views/Profile/Administrator/Admin_customerList.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Admin_customerList.cshtml
@@ -69,7 +69,7 @@
                 @foreach (var item in Model)
                 {
                     <tr>
-                        <td>
+                        <td id="customerIdRow-@item.Id">
                             @item.Id
                         </td>
                         <td>
@@ -85,7 +85,7 @@
 
                                 <!-- INFO Button trigger modal -->
                                 <span data-toggle="tooltip" data-placement="bottom" title="info">
-                                    <button type="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModal-details" style="background-color:transparent">
+                                    <button type="button" onclick="GetModalInfo(@item.Id, 'customerDetails')" class="btn btn-light" data-toggle="modal" data-target="#exampleModal-details" style="background-color:transparent">
                                         <i class="fas fa-info-circle"></i>
                                     </button>
                                 </span>
@@ -98,7 +98,7 @@
                                 @*---------------------------------------------------------------------------------*@
                                 <!-- DELETE Button trigger modal -->
                                 <span data-toggle="tooltip" data-placement="bottom" title="delete">
-                                    <button type="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModal-delete" style="background-color:transparent">
+                                    <button type="button" onclick="RemoveProduct(@item.Id)" class="btn btn-light" data-toggle="modal" data-target="#exampleModal-delete" style="background-color:transparent">
                                         <i class="far fa-trash-alt"></i>
                                     </button>
                                 </span>
@@ -353,7 +353,9 @@
                 Delete customer?
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-danger">Yes</button>
+                <form asp-action="RemoveCustomer">
+                    <button name="id" id="DeleteBtn" value="" class="btn btn-danger">Yes</button>
+                </form>
                 <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
             </div>
         </div>
