--- a/Deckel-Shop/Views/Profile/Administrator/Admin_customerList.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Admin_customerList.cshtml
@@ -54,13 +54,16 @@
             <thead>
                 <tr>
                     <th>
-                        @Html.DisplayNameFor(model => model.Id)
+                        CUSTOMER#
                     </th>
                     <th>
-                        @Html.DisplayNameFor(model => model.FirstName)
+                        FIRST NAME
                     </th>
                     <th>
-                        @Html.DisplayNameFor(model => model.LastName)
+                        LAST NAME
+                    </th>
+                    <th>
+                        PHONE NUMBER
                     </th>
                     <th></th>
                 </tr>
@@ -79,6 +82,9 @@
                             @item.LastName
                         </td>
                         <td>
+                            @item.Phone
+                        </td>
+                        <td>
                             @*column with the buttons*@
                             <div class="btn-group" role="group" aria-label="Basic example">
                                 @*---------------------------------------------------------------------------------*@
@@ -91,10 +97,10 @@
                                 </span>
                                 <!-- EDIT: Button trigger modal -->
                                 @*<span data-toggle="tooltip" data-placement="bottom" title="edit">
-                                    <button type="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModal" style="background-color:transparent">
-                                        <i class="far fa-edit"></i>
-                                    </button>
-                                </span>*@
+                                        <button type="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModal" style="background-color:transparent">
+                                            <i class="far fa-edit"></i>
+                                        </button>
+                                    </span>*@
                                 @*---------------------------------------------------------------------------------*@
                                 <!-- DELETE Button trigger modal -->
                                 <span data-toggle="tooltip" data-placement="bottom" title="delete">
@@ -180,7 +186,7 @@
                             <input name="ZipCode" type="text" class="form-control" id="inputZip">
                         </div>
                     </div>
-                    
+
 
                     <div class="modal-footer">
                         <input type="submit" value="Create" class="btn btn-primary" />
@@ -208,54 +214,54 @@
             </div>
             <div class="modal-body">
                 <form>-->
-                    @*start of form*@
-                    <!--<div class="form-row">
-                        <div class="form-group col-md-6">
-                            <label for="inputCustomerID">Customer ID</label>
-                            <input type="text" class="form-control" id="inputCustomerID" disabled>
-                        </div>
-                    </div>
-                    <div class="form-row">
-                        <div class="form-group col-md-6">
-                            <label for="inputFirstName">First Name</label>
-                            <input type="text" class="form-control" id="inputFirstName">
-                        </div>
-                        <div class="form-group col-md-6">
-                            <label for="inputLastName">Last Name</label>
-                            <input type="text" class="form-control" id="inputLastName">
-                        </div>
-                    </div>
-                    <div class="form-row">
-                        <div class="form-group col-md-6">
-                            <label for="inputEmail4">Email</label>
-                            <input type="email" class="form-control" id="inputEmail4">
-                        </div>
-                        <div class="form-group col-md-6">
-                            <label for="inputPassword">Password</label>-->
-                            @*<input type="password" class="form-control" id="inputPassword" value="faisalkhan@123">
-                            <input type="checkbox" onclick="showPassword()"> Show Password*@
-                        <!--</div>
-                    </div>
-                    <div class="form-group">
-                        <label for="inputAddress">Address</label>
-                        <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
-                    </div>
-                    <div class="form-row">
-                        <div class="form-group col-md-6">
-                            <label for="inputCity">City</label>
-                            <input type="text" class="form-control" id="inputCity">
-                        </div>
-                        <div class="form-group col-md-4">
-                            <label for="inputState">State</label>
-                            <input type="text" class="form-control" id="inputState">
-                        </div>
-                        <div class="form-group col-md-2">
-                            <label for="inputZip">Zip</label>
-                            <input type="text" class="form-control" id="inputZip">
-                        </div>
-                    </div>-->
-                    @*end of form*@
-                <!--</form>
+@*start of form*@
+<!--<div class="form-row">
+    <div class="form-group col-md-6">
+        <label for="inputCustomerID">Customer ID</label>
+        <input type="text" class="form-control" id="inputCustomerID" disabled>
+    </div>
+</div>
+<div class="form-row">
+    <div class="form-group col-md-6">
+        <label for="inputFirstName">First Name</label>
+        <input type="text" class="form-control" id="inputFirstName">
+    </div>
+    <div class="form-group col-md-6">
+        <label for="inputLastName">Last Name</label>
+        <input type="text" class="form-control" id="inputLastName">
+    </div>
+</div>
+<div class="form-row">
+    <div class="form-group col-md-6">
+        <label for="inputEmail4">Email</label>
+        <input type="email" class="form-control" id="inputEmail4">
+    </div>
+    <div class="form-group col-md-6">
+        <label for="inputPassword">Password</label>-->
+@*<input type="password" class="form-control" id="inputPassword" value="faisalkhan@123">
+    <input type="checkbox" onclick="showPassword()"> Show Password*@
+<!--</div>
+</div>
+<div class="form-group">
+    <label for="inputAddress">Address</label>
+    <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+</div>
+<div class="form-row">
+    <div class="form-group col-md-6">
+        <label for="inputCity">City</label>
+        <input type="text" class="form-control" id="inputCity">
+    </div>
+    <div class="form-group col-md-4">
+        <label for="inputState">State</label>
+        <input type="text" class="form-control" id="inputState">
+    </div>
+    <div class="form-group col-md-2">
+        <label for="inputZip">Zip</label>
+        <input type="text" class="form-control" id="inputZip">
+    </div>
+</div>-->
+@*end of form*@
+<!--</form>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-danger">Save changes</button>
@@ -264,8 +270,6 @@
         </div>
     </div>
 </div>-->
-
-
 <!-- INFO Button Modal -->
 <div class="modal fade" id="exampleModal-details" tabindex="-1" aria-labelledby="exampleModal-detailsLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
@@ -307,7 +311,7 @@
                         <div class="form-group col-md-6">
                             <label for="inputPassword">Password</label>
                             <input type="password" class="form-control inputpassword" id="inputPassword" value="faisalkhan@123" disabled>
-                                <input type="checkbox" onclick="showPassword()"> Show Password
+                            <input type="checkbox" onclick="showPassword()"> Show Password
                         </div>
                     </div>
                     <div class="form-group">
