fixed remove customer bug

--- a/Deckel-Shop/Views/Product/Index.cshtml
+++ b/Deckel-Shop/Views/Product/Index.cshtml
@@ -4,7 +4,7 @@
     <h3 class="h3">Popular Propeller Caps</h3>
     <div class="col-sm-2">
         <div class="d-flex">
-            <div class="dropdown mr-1">
+            <div class="dropdown mr-1 text-right">
                 <button type="button" class="btn btn-secondary dropdown-toggle" id="dropdownMenuOffset" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-offset="10,20">
                     Sort by
                 </button>
