Updated Logo + new pictures for carousel

--- a/Deckel-Shop/Views/Home/Index.cshtml
+++ b/Deckel-Shop/Views/Home/Index.cshtml
@@ -29,7 +29,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <div class="overlay-image" style="background-image: url('https://thumbs.dreamstime.com/b/caucasian-woman-wearing-propeller-cap-2043903.jpg');"></div>
+                <div class="overlay-image" style="background-image: url('https://medias.spotern.com/spots/w640/0/742-1562668779.jpg');"></div>
                 <div class="container-p">
                     <h1>Happyness neverending</h1>
                     <p>
@@ -38,7 +38,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <div class="overlay-image" style="background-image: url('https://www.pulju.net/images/products/propellihattu_orig.jpg');"></div>
+                <div class="overlay-image" style="background-image: url('https://cdn.shopify.com/s/files/1/2384/2133/products/lg_60225.jpg?v=1516328737'); "></div>
                 <div class="container-p">
                     <h1>Dont be out be in!</h1>
                     <p>
