Changed index product h3

--- a/Deckel-Shop/Views/Product/Index.cshtml
+++ b/Deckel-Shop/Views/Product/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<Database.Models.Product>
 
-<h3 class="h3">Popular Propeller Caps</h3>
+<h3 class="h3">Our fine Products!</h3>
 <div class="row">
 
     @foreach (var p in Model)
