--- a/Deckel-Shop/Views/Profile/Administrator/Admin_customerList.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Admin_customerList.cshtml
@@ -206,81 +206,13 @@
 </div>
 
 
-<!-- EDIT: Button Modal -->
-<!--<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-        <div class="DeckelModal modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Edit customer info</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <form>-->
-@*start of form*@
-<!--<div class="form-row">
-    <div class="form-group col-md-6">
-        <label for="inputCustomerID">Customer ID</label>
-        <input type="text" class="form-control" id="inputCustomerID" disabled>
-    </div>
-</div>
-<div class="form-row">
-    <div class="form-group col-md-6">
-        <label for="inputFirstName">First Name</label>
-        <input type="text" class="form-control" id="inputFirstName">
-    </div>
-    <div class="form-group col-md-6">
-        <label for="inputLastName">Last Name</label>
-        <input type="text" class="form-control" id="inputLastName">
-    </div>
-</div>
-<div class="form-row">
-    <div class="form-group col-md-6">
-        <label for="inputEmail4">Email</label>
-        <input type="email" class="form-control" id="inputEmail4">
-    </div>
-    <div class="form-group col-md-6">
-        <label for="inputPassword">Password</label>-->
-@*<input type="password" class="form-control" id="inputPassword" value="faisalkhan@123">
-    <input type="checkbox" onclick="showPassword()"> Show Password*@
-<!--</div>
-</div>
-<div class="form-group">
-    <label for="inputAddress">Address</label>
-    <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
-</div>
-<div class="form-row">
-    <div class="form-group col-md-6">
-        <label for="inputCity">City</label>
-        <input type="text" class="form-control" id="inputCity">
-    </div>
-    <div class="form-group col-md-4">
-        <label for="inputState">State</label>
-        <input type="text" class="form-control" id="inputState">
-    </div>
-    <div class="form-group col-md-2">
-        <label for="inputZip">Zip</label>
-        <input type="text" class="form-control" id="inputZip">
-    </div>
-</div>-->
-@*end of form*@
-<!--</form>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-danger">Save changes</button>
-                <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
-            </div>
-        </div>
-    </div>
-</div>-->
 <!-- INFO Button Modal -->
 <div class="modal fade" id="exampleModal-details" tabindex="-1" aria-labelledby="exampleModal-detailsLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
         <div class="DeckelModal modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalLabel">Customer info</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close" />
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
                 <span aria-hidden="true">&times;</span>
             </div>
             <div class="modal-body">
