removed profile tab from customer profile

--- a/Deckel-Shop/Views/Profile/Customer/Index.cshtml
+++ b/Deckel-Shop/Views/Profile/Customer/Index.cshtml
@@ -12,22 +12,22 @@
 
 
 <ul class="nav nav-tabs">
+    @*<li class="nav-item">
+        <a class="nav-link" asp-action="Index">Profile</a>
+    </li>*@
     <li class="nav-item">
-        <a class="nav-link active" asp-action="Index">Profile</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" asp-action="CustomerOrderHistory">Order History</a>
+        <a class="nav-link active" asp-action="CustomerOrderHistory">Order History</a>
     </li>
     <li class="nav-item">
         <a class="nav-link" href="~/Identity/Account/Manage/">Manage account</a>
     </li>
-    <li class="nav-item">
+    @*<li class="nav-item">
         <a class="nav-link disabled" href="#">Disabled</a>
-    </li>
+    </li>*@
 </ul>
 
 
-<ul>
+@*<ul>
     @foreach (var person in Model)
     {
         <li>
@@ -35,4 +35,4 @@
             <small>@person.City</small>
         </li>
     }
-</ul>
+</ul>*@
