--- a/Deckel-Shop/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/Deckel-Shop/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -15,18 +15,18 @@
     <h4>Change your account settings</h4>
 
     <ul class="nav nav-tabs">
-        <li class="nav-item">
+        @*<li class="nav-item">
             <a class="nav-link " asp-controller="Profile" asp-action="Index">Profile</a>
-        </li>
+        </li>*@
         <li class="nav-item">
             <a class="nav-link" asp-controller="Profile" asp-action="CustomerOrderHistory">Order History</a>
         </li>
         <li class="nav-item">
             <a class="nav-link active" href="~/Identity/Account/Manage/">Manage account</a>
         </li>
-        <li class="nav-item">
+        @*<li class="nav-item">
             <a class="nav-link disabled" href="#">Disabled</a>
-        </li>
+        </li>*@
     </ul>
 
     <div class="row">
