--- a/Deckel-Shop/Views/Profile/Customer/OrderHistory.cshtml
+++ b/Deckel-Shop/Views/Profile/Customer/OrderHistory.cshtml
@@ -1,27 +1,26 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
-
+﻿@using Microsoft.AspNetCore.Identity
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
 
 <h1>Order History</h1>
+<h3>@UserManager.GetUserAsync(User).Result.UserName</h3>
 
-<h3>Name of customer</h3>
+@*<h3>Name of customer</h3>*@
+
 
 <ul class="nav nav-tabs">
-    <li class="nav-item">
+    @*<li class="nav-item">
         <a class="nav-link" asp-action="Index">Profile</a>
-    </li>
+    </li>*@
     <li class="nav-item">
         <a class="nav-link active" asp-action="CustomerOrderHistory">Order History</a>
     </li>
     <li class="nav-item">
         <a class="nav-link" href="~/Identity/Account/Manage/">Manage account</a>
     </li>
-    <li class="nav-item">
+    @*<li class="nav-item">
         <a class="nav-link disabled" href="#">Disabled</a>
-    </li>
+    </li>*@
 </ul>
 
 
