changed customerID to readonly in admin view

--- a/Deckel-Shop/Views/Profile/Administrator/Admin_customerList.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Admin_customerList.cshtml
@@ -221,7 +221,7 @@
                     <div class="form-row">
                         <div class="form-group col-md-6">
                             <label for="inputCustomerID">Customer ID</label>
-                            <input type="text" name="detailsCustomerID" class="form-control" id="detailsCustomerID" disabled >
+                            <input type="text" name="detailsCustomerID" class="form-control" id="detailsCustomerID" readonly >
                         </div>
                         <div class="col-md-6 text-right">
                             <button type="button" id="editBtn" onclick="enableForm()" class="btn btn-light" style="background-color:transparent">
