Modified nav bar so that hover effects work with open and closed side nav bar.

--- a/Deckel-Shop/Views/Shared/_Layout.cshtml
+++ b/Deckel-Shop/Views/Shared/_Layout.cshtml
@@ -22,16 +22,16 @@
                 </a>
             </div>
             <ul class="nav-links">
-                <li>
-                    <a asp-area="" asp-controller="Profile" asp-action="administrator">Admin</a>
+                <li class="navAnim">
+                    <a  asp-area="" asp-controller="Profile" asp-action="administrator">Admin</a>
                 </li>
-                <li>
+                <li class="navAnim">
                     <a asp-area="" asp-controller="Product" asp-action="index">Shop</a>
                 </li>
-                <li>
+                <li class="navAnim">
                     <a asp-area="" asp-controller="Home" asp-action="About">About</a>
                 </li>
-                <li>
+                <li class="navAnim">
                     <a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a>
                 </li>
             </ul>
